alignment fixes

--- a/src/components/main/_main.styles.scss
+++ b/src/components/main/_main.styles.scss
@@ -1,29 +1,29 @@
 #main {
-  width: 100%;
-  min-height: 100vh;
-  max-height: 100vh;
-  @include flexbox(column);
-  overflow-y: scroll;
-  scroll-behavior: smooth;
+	width: 100%;
+	min-height: calc(100vh - 6rem);
+	max-height: calc(100vh - 6rem);
+	@include flexbox(column);
+	overflow-y: scroll;
+	scroll-behavior: smooth;
 
-  &::-webkit-scrollbar {
-    background-color: rgba(0, 0, 0, 0.267);
-    width: 5px;
-    cursor: pointer;
-  }
+	&::-webkit-scrollbar {
+		background-color: rgba(0, 0, 0, 0.267);
+		width: 5px;
+		cursor: pointer;
+	}
 
-  &::-webkit-scrollbar-thumb {
-    background-color: var(--green);
-    width: 5px;
-  }
+	&::-webkit-scrollbar-thumb {
+		background-color: var(--green);
+		width: 5px;
+	}
 
-  @media (max-width: 1100px) {
-    width: 100%;
-  }
+	@media (max-width: 1100px) {
+		width: 100%;
+	}
 
-  @media (max-width: 700px) {
-    &::-webkit-scrollbar {
-      width: 1px;
-    }
-  }
+	@media (max-width: 700px) {
+		&::-webkit-scrollbar {
+			width: 1px;
+		}
+	}
 }
