--- a/src/components/nav/_nav.styles.scss
+++ b/src/components/nav/_nav.styles.scss
@@ -1,6 +1,6 @@
 #nav {
 	width: 100%;
-	height: 7rem;
+	height: 6rem;
 	background-color: var(--dark-1);
 	@include flexbox(column);
 	align-items: stretch;
