--- a/src/components/sections/contact/_contact.styles.scss
+++ b/src/components/sections/contact/_contact.styles.scss
@@ -1,141 +1,142 @@
 .contact {
-  .section-wrapper {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-  }
+	.section-wrapper {
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+	}
 
-  .contact-form {
-    width: 70%;
-    margin: 0 auto;
+	.contact-form {
+		width: 70%;
+		margin: 0 auto;
+		margin-top: 2rem;
+		@include flexbox;
 
-    @media (max-width: 1000px) {
-      width: 100%;
-    }
+		@media (max-width: 1000px) {
+			width: 100%;
+		}
 
-    form {
-      width: 100%;
-      height: 100%;
-      & > div {
-        position: relative;
-        margin-bottom: 2rem;
+		form {
+			width: 100%;
+			height: 100%;
+			& > div {
+				position: relative;
+				margin-bottom: 2rem;
 
-        @media (max-width: 600px) {
-          margin-bottom: 2rem;
-        }
-      }
-      label {
-        position: absolute;
-        top: 50%;
-        left: 2rem;
-        transform: translateY(-50%);
-        color: var(--sayan);
-        font-size: 1.8rem;
-        font-family: inherit;
-        display: none;
+				@media (max-width: 600px) {
+					margin-bottom: 2rem;
+				}
+			}
+			label {
+				position: absolute;
+				top: 50%;
+				left: 2rem;
+				transform: translateY(-50%);
+				color: var(--sayan);
+				font-size: 1.8rem;
+				font-family: inherit;
+				display: none;
 
-        &[for="message"] {
-          top: 2rem;
-          transform: translateY(0%);
-        }
-      }
+				&[for='message'] {
+					top: 2rem;
+					transform: translateY(0%);
+				}
+			}
 
-      input,
-      textarea {
-        width: 100%;
-        padding: 2rem;
-        color: var(--white-1);
-        appearance: none;
-        border: none;
-        outline: none;
-        background-color: transparent;
-        @include boxshadow;
-        font-size: 1.8rem;
-        font-family: inherit;
+			input,
+			textarea {
+				width: 100%;
+				padding: 2rem;
+				color: var(--white-1);
+				appearance: none;
+				border: none;
+				outline: none;
+				background-color: transparent;
+				@include boxshadow;
+				font-size: 1.4rem;
+				font-family: inherit;
 
-        @media (max-width: 700px) {
-          font-size: 1.4rem;
-        }
+				@media (max-width: 700px) {
+					font-size: 1.4rem;
+				}
 
-        &::placeholder {
-          text-transform: capitalize;
+				&::placeholder {
+					text-transform: capitalize;
 
-          @media (max-width: 700px) {
-            font-size: 1.4rem;
-          }
-        }
-      }
+					@media (max-width: 700px) {
+						font-size: 1.4rem;
+					}
+				}
+			}
 
-      input {
-        height: 5rem;
-      }
+			input {
+				height: 5rem;
+			}
 
-      textarea {
-        height: 25rem;
+			textarea {
+				height: 20rem;
 
-        @media (max-width: 700px) {
-          height: 20rem;
-        }
-      }
+				@media (max-width: 700px) {
+					height: 20rem;
+				}
+			}
 
-      .submit-and-email {
-        width: 100%;
-        margin: 0 auto;
-        @include flexbox;
-        justify-content: space-between;
+			.submit-and-email {
+				width: 100%;
+				margin: 0 auto;
+				@include flexbox;
+				justify-content: space-between;
 
-        @media (max-width: 500px) {
-          flex-direction: column;
-        }
+				@media (max-width: 500px) {
+					flex-direction: column;
+				}
 
-        span {
-          font-size: 1.8rem;
-        }
+				span {
+					font-size: 1.4rem;
+				}
 
-        button,
-        a {
-          display: inline-block;
-          appearance: none;
-          outline: none;
-          border: none;
-          padding: 1.2rem 0;
-          text-decoration: none;
-          background-color: transparent;
-          border: 1px solid var(--green);
-          font-size: 2rem;
-          transition: 0.25s;
-          color: var(--white-1);
-          cursor: pointer;
-          border-radius: 10px;
-          width: 45%;
-          background-color: var(--green);
+				button,
+				a {
+					display: inline-block;
+					appearance: none;
+					outline: none;
+					border: none;
+					padding: 1.2rem 0;
+					text-decoration: none;
+					background-color: transparent;
+					border: 1px solid var(--green);
+					font-size: 1.4rem;
+					transition: 0.25s;
+					color: var(--white-1);
+					cursor: pointer;
+					border-radius: 5px;
+					width: 45%;
+					background-color: var(--green);
 
-          @media (max-width: 700px) {
-            font-size: 1.4rem;
-            padding: 1rem 0;
-          }
+					@media (max-width: 700px) {
+						font-size: 1.4rem;
+						padding: 1rem 0;
+					}
 
-          @media (max-width: 500px) {
-            width: 80%;
-          }
+					@media (max-width: 500px) {
+						width: 80%;
+					}
 
-          &:hover {
-            background-color: var(--green);
-            border: 1px solid var(--green);
-          }
-        }
-      }
+					&:hover {
+						background-color: var(--green);
+						border: 1px solid var(--green);
+					}
+				}
+			}
 
-      a.email-me-btn {
-        text-align: center;
-        background-color: transparent;
-        border: 1px solid var(--sayan);
-        &:hover {
-          background-color: var(--green);
-          border: 1px solid var(--green);
-        }
-      }
-    }
-  }
+			a.email-me-btn {
+				text-align: center;
+				background-color: transparent;
+				border: 1px solid var(--sayan);
+				&:hover {
+					background-color: var(--green);
+					border: 1px solid var(--green);
+				}
+			}
+		}
+	}
 }
