--- a/src/components/sections/projects/_projects.styles.scss
+++ b/src/components/sections/projects/_projects.styles.scss
@@ -38,6 +38,7 @@
 					font-size: 1.8rem;
 					text-transform: capitalize;
 					margin-top: 1rem;
+					font-weight: 400;
 				}
 
 				p {
